emulator/src/preprocessor/snapshots/z33_emulator__preprocessor__tests__condition_parse_error_test.snap
---
source: emulator/src/preprocessor/mod.rs
assertion_line: 860
expression: report
---
error: invalid condition syntax: found end of input expected any, '*', '/', '+', '-', '<', '>', '&', '|', '=', or '!'
  ┌─ /invalid.S:2:5
  │
2 │ #if (1 + 5
  │     ^^^^^^
